tests/build/cases/widget_new/missing_semi2.stderr
error: expected `=` or `;`
  --> cases/widget_new/missing_semi2.rs:10:9
   |
10 |         enabled = true;
   |         ^^^^^^^

warning: unused import: `margin`
 --> cases/widget_new/missing_semi2.rs:2:35
  |
2 | use zero_ui::properties::{cursor, margin};
  |                                   ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
